# digest

./: .tool-versions  Makefile  README.md  alembic.ini  pyproject.toml
apps/admin-ui/: .env.example  package.json  pnpm-lock.yaml
apps/admin-ui/src/lib/: api.ts  types.ts
apps/admin-ui/src/lib/components/: IntrospectView.svelte
apps/admin-ui/src/routes/: +page.svelte
apps/admin-ui/src/routes/admin/sources/: +page.svelte  +page.ts
apps/admin-ui/src/routes/admin/sources/[slug]/introspect/: +page.svelte  +page.ts
apps/admin-ui/src/routes/admin/sources/new/: +page.svelte
apps/api/: main.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py  routes_sources.py
apps/api/app/core/: config.py  db.py  errors.py
apps/api/app/db/: env.py
apps/api/app/db/versions/: 74d8df59822a_add_raw_articles.py  798edbedad35_add_status_cols_to_sources.py  bdae921efe47_add_articles.py
apps/api/app/models/: __init__.py  article.py  raw_article.py  source.py
apps/api/app/repositories/: source_repository.py
apps/api/app/schemas/: source.py
apps/api/app/services/: introspect_service.py  source_service.py
backend/: .gitignore  alembic.ini  pyproject.toml
backend/app/infra/db/versions/: 9c1a7ad9504e_add_sources.py
backend/app/models/: source.py
scripts/: seed_sources.py
