[project]
name = "digest"
version = "0.1.0"
description = "Tech info in one place, script creator"
authors = [
    {name = "alessandro",email = "par_214@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser (>=6.0.12,<7.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
